--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,5 @@ php:
 
 before_script:
   - git clone --depth=100 https://github.com/yiisoft/yii.git yii
-  - cd tests
 
-script: phpunit --colors --coverage-text controllers/SlugTestController.php
+script: phpunit --colors --coverage-text --include-path ./yii/framework tests/controllers/SlugControllerTest.php
